--- a/contact.html
+++ b/contact.html
@@ -14,10 +14,11 @@
 
     </head>
 
+
     <body>
         <!-- NAV START -->
         <header class="kichwa">
-            <img  src="/img/logo.JPG" alt="" class="logo">
+            <img  src="/img2/logo.JPG" alt="" class="logo">
 
             <nav class="menu">
                 <a  class="hd-lnk" href="index.html"><button style="color: rgb(0, 0, 0);" class="hd-btn">Home</button></a>
@@ -26,22 +27,22 @@
                 <div class="hd-dropdown">
                    <button class="hd-drop-btn">About us &#11167</button>
                    <div class="hd-drop">
-                       <a href="/pages/about.html">About STL</a>
-                       <a href="/pages/awards.html">Awards</a>
+                       <a href="us.html">About STL</a>
+                       <a href="awards.html">Awards</a>
                    </div>
                </div>
                
    
               <div class="hd-dropdown">
-                   <button class="hd-drop-btn">Our Products &#11167</button>
+                   <button class="hd-drop-btn">Our Products</button>
                    <div class="hd-drop">
-                       <a href="/pages/man-pple.html">Managing People</a>
-                       <a href="/pages/man-proc.html">Managing Processes</a>
-                       <a href="/pages/man-gov.html">Managing Governace &#10148</a>
+                       <a href="products.html">Managing People</a>
+                       <a href="products.html">Managing Processes</a>
+                       <a href="products.html">Managing Governace &#10148</a>
                    </div>
                </div>
    
-               <a class="hd-lnk" href="/pages/contact.html"><button class="hd-btn">Contact</button></a>
+               <a class="hd-lnk" href="contact.html"><button class="hd-btn">Contact</button></a>
    
 
             </nav>
@@ -360,20 +361,20 @@
         <div class="cards">
 
             <div class="small-card">
-                <img class="img-card" src="img/location.JPG" alt="">
+                <img class="img-card" src="img2/location.JPG" alt="">
                 <p>West Point Building, 7th Floor, Mpaka Road, Westlands, Nairobi</p>
 
             </div>
 
             <div class="small-card">
-                <img  class="img-card" src="img/tel.JPG" alt="" class="tel">
+                <img  class="img-card" src="img2/tel.JPG" alt="" class="tel">
                 <p>+254 709 609 000 <br> 
                     +254 722 207 450</p>
 
             </div>
 
             <div class="small-card">
-                <img  class="img-card" src="img/email.JPG" alt="" class="email">
+                <img  class="img-card" src="img2/email.JPG" alt="" class="email">
                 <p>info@stl-horizon.com <br>
                     P.O Box 17797 – 00500</p>
 
@@ -408,16 +409,16 @@
         <div class="ft-top">
         <div class="ft-rgt">
             <a class="ft-logo" href="index.html">
-                <img src="img/logo-foot.jpg" alt="">
+                <img src="img2/logo-foot.jpg" alt="">
             </a>
             <h2>Download Our Apps</h2>
 
             <a href="https://www.apple.com/app-store/"><button class="app-btn">
-                <img src="img/ios.jpg" alt="">
+                <img src="img2/ios.jpg" alt="">
             </button></a>
 
             <a href="https://play.google.com/store/apps?hl=en&gl=US&pli=1"><button class="app-btn">
-                <img src="img/android-store.jpg" alt="">
+                <img src="img2/android-store.jpg" alt="">
             </button></a>
         </div>
 
@@ -467,9 +468,9 @@
                 Reserved|Privacy Policy|Terms & Conditions
             </p>
             <div class="ft-icons">
-            <a class="icons"  href="https://ke.linkedin.com/"><img  src="img/in.jpg" alt=""></a>
-            <a class="icons" href="https://twitter.com/?lang=en"><img src="img/x.jpg" alt=""></a>
-            <a class="icons" href="https://www.facebook.com/"><img  src="img/fb.jpg" alt=""></a>
+            <a class="icons"  href="https://ke.linkedin.com/"><img  src="img2/in.jpg" alt=""></a>
+            <a class="icons" href="https://twitter.com/?lang=en"><img src="img2/x.jpg" alt=""></a>
+            <a class="icons" href="https://www.facebook.com/"><img  src="img2/fb.jpg" alt=""></a>
         </div>
         </div>
 
