--- a/us.html
+++ b/us.html
@@ -12,18 +12,18 @@
     <!--navigation-->
     <div class="bar">
         <img class="pic" width="150" height="150" src="logo.png" alt="" />
-        <a href="class.html">Home</a>
+        <a href="index.html">Home</a>
         <div class="drop">
             <button class="ton">About Us</button>
             <div class="content">
-                <a href="about.html">About stl</a>
-                <a href="">Awards</a>
+                <a href="us.html">About stl</a>
+                <a href="award.html">Awards</a>
             </div>
         </div>
         <div class="drop">
             <button class="ton">Our Products</button>
             <div class="content">
-                <a href="">Managing people</a>
+                <a href="product.html">Managing people</a>
                 <a href="">Managing proces</a>
                 <a href="">managing governance</a>
             </div>
