--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <p class="temp-txt">eHorizon - HRMS(Human Resource Management System)</p> 
 
            <h2 class="temp1-hd"><strong>
-                Human Resource and Payroll.
+                Human Resource and Payroll
            </strong></h2> 
 
             <p class="temp-txt">
