--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
      <!-- header start -->
      <div class="back-grnd">
         <div class="kichwa">
-            <a style="margin-right: 30%;"
+            <a class="logo-link" style="margin-right: 30%;"
              href="index.html">
                 <img class="hd-img" src="/img/logo1.JPG" alt="">
             </a>
