--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="kichwa">
             <a class="logo-link" style="margin-right: 30%;"
              href="index.html">
-                <img class="hd-img" src="/img/logo1.JPG" alt="">
+                <img class="hd-img" src="/img/logostl.png" alt="">
             </a>
 
             <a  class="hd-lnk" href="index.html"><button style="color: rgb(255, 37, 37);" class="hd-btn">Home</button></a>
