--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
              <div class="hd-dropdown">
                 <button class="hd-drop-btn">About us &#11167</button>
                 <div class="hd-drop">
-                    <a href="about.html">About STL</a>
+                    <a href="us.html">About STL</a>
                     <a href="award.html">Awards</a>
                 </div>
             </div>
