--- a/us.html
+++ b/us.html
@@ -23,7 +23,7 @@
         <div class="drop">
             <button class="ton">Our Products</button>
             <div class="content">
-                <a href="product.html">Managing people</a>
+                <a href="products.html">Managing people</a>
                 <a href="">Managing proces</a>
                 <a href="">managing governance</a>
             </div>
