--- a/us.html
+++ b/us.html
@@ -24,8 +24,8 @@
             <button class="ton">Our Products</button>
             <div class="content">
                 <a href="products.html">Managing people</a>
-                <a href="">Managing proces</a>
-                <a href="">managing governance</a>
+                <a href="products.html">Managing proces</a>
+                <a href="products.html">managing governance</a>
             </div>
         </div>
         <a href="contact.html">contact us</a>
